# spectrIDA-Reverse_Engineering_Stack

./: .gitignore  CHANGELOG.md  DYNAMIC_DESIGN.md  LICENSE  README.md  _add_lift_fn.py  _gen_lift.py  pyproject.toml
.github/workflows/: ci.yml
archive/: atlas_extension.py.retired
desktop/: README.md  main.js  package-lock.json  package.json  preload.js
desktop/backend/: server.py
desktop/renderer/: app.js  index.html  styles.css
phantomrt/: PROJECT.md  README.md  pyproject.toml  run_atlas.py  run_fuzz.py  setup_sandbox.sh
phantomrt/atlas/: __init__.py
phantomrt/atlas/agents/: __init__.py  command_space.py
phantomrt/atlas/analysis/: __init__.py  binary_agent.py  binary_fuzz.py  frida_live.py  graph_annotator.py  spectrida_bridge.py  unicorn_harness.py
phantomrt/atlas/core/: __init__.py  decoder.py  dynamics.py  encoder.py  surprise.py  world_model.py
phantomrt/atlas/environments/: __init__.py  base.py  grid_world.py  physics_2d.py  vm_world.py
phantomrt/atlas/knowledge/: __init__.py  instruction_vocab.py
phantomrt/atlas/monitor/: __init__.py  execution_monitor.py
phantomrt/atlas/optimization/: __init__.py  speed.py
phantomrt/atlas/planning/: __init__.py  goal.py  mcts.py
phantomrt/atlas/training/: __init__.py  continual.py  growth.py  loop.py  losses.py  self_train.py
phantomrt/atlas/utils/: __init__.py  logging.py  math_helpers.py  viz.py
phantomrt/atlas/vm/: __init__.py  wsl_vm.py
phantomrt/tests/: fake_vm.py  test_binary_fuzz.py  test_dynamics.py  test_emulated_fuzz.py  test_encoder.py  test_frida_live.py  test_graph_annotator.py  test_growth.py  test_planning.py  test_self_train.py  test_surprise.py  test_unicorn_harness.py  test_vm_world.py  test_world_model.py
scripts/: populate_graph.py  upload_gguf.py
spectrida/: __init__.py  api.py  cli.py  config.py  context.py  idb_knowledge.py  mcp_install.py  mcp_server.py  onboard.py  voice.py
spectrida/analysis/: parallel_analyze.py  shard_worker.py
spectrida/analysis/ida_gpu_accel/: __init__.py  arm32_scanner.py  arm64_scanner.py  capstone_scanner.py  config.py  preseeder.py  x86_64_scanner.py
spectrida/core/: backend.py  demo.py  graph.py  ida.py  ollama.py  pipeline.py  populate.py  services.py
spectrida/dynamic/: __init__.py  annotate.py  emulate.py  fuzz.py  live.py  seeds.py  vm_learn.py
spectrida/tui/: app.py  styles.tcss
spectrida/tui/screens/: analyze.py  browser.py  dialogs.py
spectrida/tui/widgets/: disasm.py  funclist.py  statusbar.py
spectrida/verify/: lift.py  oracle.py  scale.py  trace.py
tests/: test_arm32_scanner.py  test_config.py  test_core.py  test_voice.py
