[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantomrt"
version = "0.1.1"
description = "Atlas — dynamic reverse-engineering: emulate, live-instrument, and fuzz functions, with a self-improving world model. The runtime companion to spectrIDA."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ggfuchsi-oss"}]
keywords = ["reverse-engineering", "fuzzing", "emulation", "unicorn", "frida",
            "binary-analysis", "world-model", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
]

# Core: emulation + fuzzing + graph annotation + the world model. Atlas is the
# heavy optional extra of spectrIDA (spectrida[atlas]), so these deps are expected
# at this layer; spectrIDA's own base install stays light and pulls none of them.
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.1.0",
    "torchdiffeq>=0.2.3",
    "unicorn>=2.0.0",
    "capstone>=5.0.0",
    "neo4j>=5.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
live = ["frida>=16.0"]                 # live instrumentation (runnable targets)
viz = ["matplotlib>=3.7.0"]            # trajectory / training visualization
dev = ["pytest>=7.4.0", "keystone-engine>=0.9.2", "black>=23.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/ggfuchsi-oss/spectrIDA-Reverse_Engineering_Stack"
Repository = "https://github.com/ggfuchsi-oss/spectrIDA-Reverse_Engineering_Stack"

[project.scripts]
atlas-fuzz = "run_fuzz:main"
atlas-learn = "run_atlas:main"

[tool.setuptools.packages.find]
include = ["atlas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# faulthandler: the Unicorn harness deliberately triggers CPU faults (that's how it
#   detects crashes); faulthandler misreads those as process faults — disable it.
# -m "not live": the Frida live tests spawn real OS processes and trigger Windows
#   Error Reporting; they destabilize a shared suite run (importing torch first
#   makes the spawn hang). Run them on demand, targeting the file so torch isn't
#   imported:  pytest tests/test_frida_live.py -m live
addopts = "-p no:faulthandler -m 'not live'"
markers = [
    "live: spawns real processes via Frida (run explicitly with -m live)",
]

[tool.black]
line-length = 100
